--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-<!--Thanks FreeCodeCamp--->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>TicTacToe</title>
 	<link rel="stylesheet" href="style.css">
+	<link rel="icon" href="./img/favicon.ico" type="images/x-icon">
+	<title>TicTacToe</title>
 </head>
 <body>
 	<table>
